SERVER-68522 Prevent 5.0 binary from starting in FCV 4.4 with misconfigured TTL index