src/mongo/db/commands/set_feature_compatibility_version_command.cpp
@@ -35,6 +35,7 @@
 
 #include "mongo/db/auth/authorization_session.h"
 #include "mongo/db/catalog/coll_mod.h"
+#include "mongo/db/catalog/collection_catalog_helper.h"
 #include "mongo/db/catalog/database.h"
 #include "mongo/db/catalog/database_holder.h"
 #include "mongo/db/catalog/drop_collection.h"
@@ -677,6 +678,48 @@ private:
         }
     }
 
+    /**
+     * TTL indexes with NaN 'expireAfterSeconds' are only supported in 5.0. If the user tries to
+     * downgrade the cluster to an earlier version, they must first remove all TTL indexes with
+     * NaN 'expireAfterSeconds'.
+     */
+    void _disallowTTLIndexesWithNaNExpireAfterSecondsOnDowngrade(OperationContext* opCtx) {
+        auto collCatalog = CollectionCatalog::get(opCtx);
+        for (const auto& db : collCatalog->getAllDbNames()) {
+            for (auto collIt = collCatalog->begin(opCtx, db); collIt != collCatalog->end(opCtx);
+                 ++collIt) {
+                NamespaceStringOrUUID collName(
+                    collCatalog->lookupNSSByUUID(opCtx, collIt.uuid().get()).get());
+                AutoGetCollectionForRead coll(opCtx, collName);
+                if (!coll) {
+                    continue;
+                }
+
+                auto idxCatalog = coll->getIndexCatalog();
+                auto iter = idxCatalog->getIndexIterator(opCtx, /*includeUnfinished=*/true);
+                while (iter->more()) {
+                    opCtx->checkForInterrupt();
+                    auto entry = iter->next();
+                    auto desc = entry->descriptor();
+                    const auto& spec = desc->infoObj();
+                    if (!spec.hasField(IndexDescriptor::kExpireAfterSecondsFieldName)) {
+                        continue;
+                    }
+                    uassert(
+                        ErrorCodes::CannotDowngrade,
+                        fmt::format("Cannot downgrade the cluster when there are TTL indexes with "
+                                    "NaN 'expireAfterSeconds' in the catalog; drop all TTL indexes "
+                                    "with NaN 'expireAfterSeconds' before downgrading. "
+                                    "First detected index: namespace: {}, UUID: {}, index: {}",
+                                    coll->ns().toString(),
+                                    coll->uuid().toString(),
+                                    spec.toString()),
+                        !spec[IndexDescriptor::kExpireAfterSecondsFieldName].isNaN());
+                }
+            }
+        }
+    }
+
     void _runDowngrade(OperationContext* opCtx,
                        const SetFeatureCompatibilityVersion& request,
                        boost::optional<Timestamp> changeTimestamp) {
@@ -719,6 +762,7 @@ private:
             });
         }
 
+        _disallowTTLIndexesWithNaNExpireAfterSecondsOnDowngrade(opCtx);
         // TODO (SERVER-56171): Remove once 5.0 is last-lts.
         removeTimeseriesEntriesFromConfigTransactions(opCtx);
 
